--- a/.github/workflows/deploy-bunny.yml
+++ b/.github/workflows/deploy-bunny.yml
@@ -37,10 +37,8 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y lftp
           
-          # Deploy dist folder to Bunny Storage via FTPS
+          # Deploy dist folder to Bunny Storage
           lftp -e "
-            set ftp:ssl-force true;
-            set ftp:ssl-protect-data true;
             set ssl:verify-certificate no;
             open -u $BUNNY_STORAGE_USERNAME,$BUNNY_STORAGE_PASSWORD $BUNNY_STORAGE_HOSTNAME;
             mirror -Rev dist $BUNNY_FOLDER --ignore-time --parallel=10 --verbose;
