--- a/.github/workflows/deploy-bunny.yml
+++ b/.github/workflows/deploy-bunny.yml
@@ -29,10 +29,8 @@ jobs:
       - name: Deploy to Bunny Storage
         env:
           BUNNY_STORAGE_PASSWORD: ${{ secrets.BUNNY_STORAGE_PASSWORD }}
-          BUNNY_STORAGE_USERNAME: editeur-livre-quantique
-          BUNNY_STORAGE_HOSTNAME: storage.bunnycdn.com
-          BUNNY_FOLDER: voyage-du-heros
-        run: |
+            BUNNY_STORAGE_USERNAME: voyage-du-heros          BUNNY_STORAGE_HOSTNAME: storage.bunnycdn.com
+            BUNNY_FOLDER: /        run: |
           # Install lftp for FTP deployment
           sudo apt-get update
           sudo apt-get install -y lftp
