--- a/.github/workflows/deploy-bunny.yml
+++ b/.github/workflows/deploy-bunny.yml
@@ -30,7 +30,8 @@ jobs:
         env:
           BUNNY_STORAGE_PASSWORD: ${{ secrets.BUNNY_STORAGE_PASSWORD }}
             BUNNY_STORAGE_USERNAME: voyage-du-heros          BUNNY_STORAGE_HOSTNAME: storage.bunnycdn.com
-            BUNNY_FOLDER: /        run: |
+            BUNNY_FO
+                        run: |
           # Install lftp for FTP deployment
           sudo apt-get update
           sudo apt-get install -y lftp
