--- a/.github/workflows/deploy-bunny.yml
+++ b/.github/workflows/deploy-bunny.yml
@@ -29,9 +29,10 @@ jobs:
       - name: Deploy to Bunny Storage
         env:
           BUNNY_STORAGE_PASSWORD: ${{ secrets.BUNNY_STORAGE_PASSWORD }}
-            BUNNY_STORAGE_USERNAME: voyage-du-heros          BUNNY_STORAGE_HOSTNAME: storage.bunnycdn.com
-            BUNNY_FO
-                        run: |
+            BUNNY_STORAGE_USERNAME: voyage-du-heros
+            BUNNY_STORAGE_HOSTNAME: storage.bunnycdn.com       
+                        BUNNY_FOLDER: /
+            run: |
           # Install lftp for FTP deployment
           sudo apt-get update
           sudo apt-get install -y lftp
