docs: Add config templates and setup guide
- Update config.example.js with current structure
- Create config.bundle.example.js for CDN deployment
- Add CONFIG_SETUP.md with detailed instructions
- Update .gitignore comments for clarity

Templates provide clear guidance for:
- Local development (config.js)
- CDN deployment (config.bundle.js)
- Security best practices
- Common troubleshooting

--- a/.gitignore
+++ b/.gitignore
@@ -8,12 +8,16 @@ yarn-error.log*
 /build
 /dist
 
-# Configuration
+# Configuration (fichiers avec vraies clés)
 src/config.js
 src/config.bundle.js
 .env
 .env.local
 .env.production
+
+# Templates OK à commiter
+# src/config.example.js
+# src/config.bundle.example.js
 
 # IDE
 .vscode/
